--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     flex-direction: column;
     gap: 10px;
     font-size: 25px;
+    flex-wrap: 1;
     color:#4a5568;
 }
 .in input {
@@ -51,11 +52,12 @@ body {
     border: 2px solid #cbd5e0;
     border-radius: 6px;
     font-size: 15px;
-    
+
     background: white;
 }
 .details {
     display: flex;
+    
     gap: 200px;
     padding-bottom: 20px;
 
@@ -81,10 +83,11 @@ body {
     flex-direction: column;
     gap: 20px;
     background: #edf2f7;
-    padding: 40px 0 40px 50px;
+    padding: 40px 40px 40px 50px;
 }
 .actual {
     display: flex;
+    gap: 20px;
 }
 .live {
     color: #2d3748;
@@ -93,6 +96,7 @@ body {
     font-family: 'Roboto',sans-serif;
 }
 .battery {
+    flex-grow: 0.40;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -105,10 +109,11 @@ body {
 }
 .name {
     font-size: 20px;
-
+    font-family: 'Roboto',sans-serif;
+    font-weight: 500;
 }
 .box {
-    width: 100px;
+    width: 100%;
     height: 150px;
     border: 3px solid #4a5568;
     background: #e2e8f0;
@@ -119,4 +124,67 @@ body {
     align-items: center;
     font-family: 'Roboto',sans-serif;
     font-weight: bold;
+    flex-grow: 1;
+    
+}
+    /*Load*/
+.load {
+    flex-grow: 0.30;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 2px solid #cbd3e0;
+    border-radius: 10px;
+    background: white;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+.gauge {
+    width: 120px;
+    height:120px;
+    margin:0 auto;
+}
+.circle {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: lightblue;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.inner {
+    width: 80px;
+    height: 80px;
+    background:azure;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.value {
+    font-size: 22px;
+    font-weight: bold;
+    color: #2d3748;
+}
+.unit {
+    font-size: 12px;
+    color: #718096;
+}
+
+/*Time*/
+.time {
+    flex-grow: 0.40;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 2px solid #cbd3e0;
+    border-radius: 10px;
+    background: white;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
