5th Phase done connected the firebase realtime database to my web app didnt have time to read through all the steps but i do know general idea of how the connections work just copied code from gemini for integrating

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     flex-direction: column;
     gap: 10px;
     font-size: 25px;
-    flex-wrap: 1;
+    
     color:#4a5568;
 }
 .in input {
@@ -94,6 +94,7 @@ body {
     font-size: 35px;
     font-weight: 700;
     font-family: 'Roboto',sans-serif;
+    padding-bottom: 20px;
 }
 .battery {
     flex-grow: 0.40;
