--- a/style.css
+++ b/style.css
@@ -189,3 +189,20 @@ body {
     align-items: center;
     padding: 10px;
 }
+
+.battery-status {
+    flex-grow: 0.40;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 2px solid #cbd3e0;
+    border-radius: 10px;
+    background: white;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+.box {
+    font-size: 24px;
+    color: #2d3748;
+}
